src/test/resources/insight/annotators/GivenParameters.soy
{namespace space}

{template .calleeTemplate}
  {@param stringParam: string}
  {@param intParam: int}
  {@param defaultParam := false}
  {$stringParam}{$intParam}{$defaultParam}
{/template}

{element .calleeElement}
  {@param stringParam: string}
  {@param intParam: int}
  {@param defaultParam := false}
  {$stringParam}{$intParam}{$defaultParam}
{/element}

{template .callerTemplate}
  {call <error descr="Missing required parameters: stringParam,intParam">.calleeTemplate</error> /}
  {call <error descr="Missing required parameters: stringParam,intParam">.calleeElement</error> /}
{/template}

{template .callerTemplate1}
  {call .calleeTemplate}
    {param stringParam: '' /}
    {param intParam: 2 /}
    {param <error descr="Unknown parameter specified">unknown</error>: '' /}
  {/call}
{/template}

{template .callerTemplate2}
  {call .calleeTemplate}
    {param stringParam: '' /}
    {param intParam: 2 /}
    {param <error descr="Duplicate parameter specified">intParam</error>: 3 /}
  {/call}
{/template}

{template .callerTemplate3}
    {call .unknownTemplate}
        {param stringParam: '' /}
        {param intParam: 2 /}
    {/call}
{/template}

{template .callerTemplate4}
    {call .calleeTemplate data = /* Specify all data */ "" /}
{/template}
